[package]
name = "polar"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clap = "3.0.0-beta.2"
indicatif = "0.16.1"
pulldown-cmark = "0.8.0"
tera = "1.11.0"
