[package]
name = "polar"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clap = { version = "3.0.7", features = ["std", "derive"], default-features = false }
pulldown-cmark = "0.8.0"
tera = { version = "1.11.0", default-features = false }
