[package]
name = "polar"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
clap = { version = "3.0.7", features = ["derive"] }
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
tera = "1.11.0"
